test/files/neg/case-collision.scala
package foo

case class Hyrax()
object HyRaX
