test/files/neg/case-collision.check
case-collision.scala:4: warning: Class foo.HyRaX$ differs only in case from foo.Hyrax$. Such classes will overwrite one another on case-insensitive filesystems.
object HyRaX
       ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
